About section done

--- a/src/css/Section.css
+++ b/src/css/Section.css
@@ -1,6 +1,6 @@
 section:first-of-type {
-    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(87,87,93,1) 100%);
-    font-family: 'Montserrat', sans-serif;
+    /* background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(87,87,93,1) 100%); */
+    
 }
 
 
