aboutme bg color has been fixed and images in "mywork" section has been converted to gifs

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,9 +1,9 @@
 #root {
-    font-family: 'Montserrat', sans-serif;
-    overflow: hidden
+  font-family: "Montserrat", sans-serif;
+  overflow: hidden;
 }
 #aboutme {
-    background-color: rgb(0, 131, 143);
-    color:white;
-    font-weight: 600;
+  background-color: rgb(0, 131, 143);
+  color: white;
+  font-weight: 600;
 }
